Add exceptionhandling, add controller methods