@@ -5,6 +5,9 @@ import be.common.xrequest.domain.author.dto.AuthorDto;
 import be.common.xrequest.domain.place.dto.PlaceDto;
 import be.common.xrequest.domain.request.XRequest;
 import be.common.xrequest.domain.request.dto.XRequestDto;
+import be.common.xrequest.exception.AuthorNotFoundException;
+import be.common.xrequest.exception.PlaceNotFoundException;
+import be.common.xrequest.exception.XRequestNotFoundException;
 import be.common.xrequest.mapper.AuthorMapper;
 import be.common.xrequest.mapper.PlaceMapper;
 import be.common.xrequest.mapper.XRequestMapper;
@@ -14,7 +17,6 @@ import be.common.xrequest.repository.XRequestRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -31,12 +33,7 @@ public class XRequestService {
     PlaceMapper placeMapper;
 
     @Autowired
-    public XRequestService(XRequestRepository xRequestRepository,
-                           XRequestMapper xRequestMapper,
-                           AuthorRepository authorRepository,
-                           AuthorMapper authorMapper,
-                           PlaceRepository placeRepository,
-                           PlaceMapper placeMapper) {
+    public XRequestService(XRequestRepository xRequestRepository, XRequestMapper xRequestMapper, AuthorRepository authorRepository, AuthorMapper authorMapper, PlaceRepository placeRepository, PlaceMapper placeMapper) {
         this.xRequestRepository = xRequestRepository;
         this.xRequestMapper = xRequestMapper;
         this.authorRepository = authorRepository;
@@ -50,7 +47,7 @@ public class XRequestService {
 
     public XRequestDto createRequest(XRequestDto xRequestDto) {
         XRequest req = xRequestMapper.mapRequestDtoToRequest(xRequestDto);
-        System.out.println(xRequestDto.getAuthor() + xRequestDto.getContent());
+
         xRequestRepository.save(req);
 
         return this.getRequestById(req.getId().toString());
@@ -58,8 +55,13 @@ public class XRequestService {
 
 
     public List<XRequestDto> getAllRequests() {
-        return xRequestRepository.findAll().stream()
-                .map(request -> xRequestMapper.mapRequestToRequestDto(request)).collect(Collectors.toList());
+        List<XRequestDto> dtoList = xRequestRepository.findAll().stream().map(request -> xRequestMapper.mapRequestToRequestDto(request)).collect(Collectors.toList());
+
+        if (dtoList.isEmpty()) {
+            throw new XRequestNotFoundException("All Requests");
+        }
+
+        return dtoList;
     }
 
     public XRequestDto getRequestById(String id) {
@@ -67,21 +69,19 @@ public class XRequestService {
         Optional<XRequest> optional = xRequestRepository.findAll().stream().filter(req -> req.getId().equals(mappedId)).findFirst();
 
         if (optional.isEmpty()) {
-            throw new NullPointerException();
+            throw new XRequestNotFoundException(id);
         }
 
         return xRequestMapper.mapRequestToRequestDto(optional.get());
     }
 
     public XRequestDto updateRequestById(String id, XRequestDto XRequestDto) {
-        if (this.getRequestById(id).getId() != null &&
-                (!this.getRequestById(id).getId().isEmpty()
-                        || !this.getRequestById(id).getId().isBlank())) {
+        if (this.getRequestById(id).getId() != null && (!this.getRequestById(id).getId().isEmpty() || !this.getRequestById(id).getId().isBlank())) {
             XRequest mapped = xRequestMapper.mapRequestDtoToRequest(XRequestDto);
             xRequestRepository.saveAndFlush(mapped);
 
             return this.getRequestById(mapped.getId().toString());
-        } else throw new NullPointerException();
+        } else throw new XRequestNotFoundException(id);
     }
 
     public AuthorDto createAuthor(AuthorDto authorDto) {
@@ -91,18 +91,43 @@ public class XRequestService {
         return this.getAuthor(author.getId().toString());
     }
 
-    public AuthorDto getAuthor(String id) {
-        Optional<Author> optionalAuthor = this.authorRepository.findById(UUID.fromString(id));
-        AuthorDto author = optionalAuthor.map(value -> authorMapper.mapAuthorToAuthorDto(value)).orElse(null);
+    public List<AuthorDto> getAuthors() {
+        return this.authorRepository.findAll().stream().map(author -> authorMapper.mapAuthorToAuthorDto(author)).collect(Collectors.toList());
+    }
 
-        return author;
+    public AuthorDto getAuthor(String id) {
+        Optional<AuthorDto> optionalAuthor = this.authorRepository.findById(UUID.fromString(id)).map(value -> authorMapper.mapAuthorToAuthorDto(value));
+
+        if (optionalAuthor.isEmpty()) throw new AuthorNotFoundException(id);
+        else return optionalAuthor.get();
     }
 
     public List<PlaceDto> getPlaces() {
         return this.placeRepository.findAll().stream().map(place -> placeMapper.mapPlaceToPlaceDto(place)).collect(Collectors.toList());
     }
 
-    public List<AuthorDto> getAuthors() {
-        return this.authorRepository.findAll().stream().map(author -> authorMapper.mapAuthorToAuthorDto(author)).collect(Collectors.toList());
+    public PlaceDto getPlace(Integer id) {
+        Optional<PlaceDto> optionalPlace = this.placeRepository.findById(id).map(p -> placeMapper.mapPlaceToPlaceDto(p));
+
+        if (optionalPlace.isEmpty()) throw new PlaceNotFoundException(id.toString());
+        else return optionalPlace.get();
+    }
+
+    public List<PlaceDto> getPlaceByPostal(String postal) {
+        List<PlaceDto> optionalPlace = this.placeRepository.findAll().stream()
+                .filter(p -> p.getPostal().equals(postal))
+                .map(p -> placeMapper.mapPlaceToPlaceDto(p)).toList();
+
+        if (optionalPlace.isEmpty()) throw new PlaceNotFoundException("All places");
+        else return optionalPlace;
+    }
+
+    public List<PlaceDto> getPlaceByCity(String city) {
+        List<PlaceDto> optionalPlace = this.placeRepository.findAll().stream()
+                .filter(p -> p.getCity().replace(" ", "").equalsIgnoreCase(city.replace(" ", "")))
+                .map(p -> placeMapper.mapPlaceToPlaceDto(p)).toList();
+
+        if (optionalPlace.isEmpty()) throw new PlaceNotFoundException("All places");
+        else return optionalPlace;
     }
 }
